fixed dark mode styles

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -23,9 +23,12 @@ $transition-slow: all .7s $bezierFast;
         font-size: $fontSizeSmall;
     }
 
+    --light: #fff;
+    --dark: #2b2b2b;
+
     //light colors
-    --bg: #fff;
-    --fg: #2B2B2B;
+    --bg: var(--light);
+    --fg: var(--dark);
     
     --grey: #F2F2F2; //eee
 
@@ -33,8 +36,8 @@ $transition-slow: all .7s $bezierFast;
     // set dark mode if user preference
     @media (prefers-color-scheme: dark) {
         // dark colors
-        --bg: #2B2B2B;
-        --fg: #fff;
+        --bg: var(--dark);
+        --fg: var(--light);
 
         --grey: #1A1A1A;
 
